# chess

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: db.sqlite3  listener.py  rabbit.py
backend/app/: admin.py  apps.py  tasks.py
backend/app/api/: urls.py
backend/app/api/game/: urls.py
backend/app/api/game/serializers/: create.py  make_move.py
backend/app/api/game/views/: create.py  make_move.py  resign.py
backend/app/api/user/: urls.py
backend/app/api/user/views/: login_view.py
backend/app/migrations/: 0001_initial.py  0002_game_move.py  0003_game_finish_reason_game_winner_colour.py
backend/app/models/: game.py
backend/chess/: models_.py
backend/chess/api/: urls.py
backend/chess/api/game/views/: create.py
backend/chess/api/user/: urls.py
backend/chess/api/user/views/: login_view.py
backend/config/: celery_app.py  settings.py  urls.py  utils.py
rabbitmq_config/: definitions.json  rabbitmq.conf
